<resources>
    <string-array name="zoom_level_names">
        <item>"50%"</item>
        <item>"60%"</item>
        <item>"70%"</item>
        <item>"80%"</item>
        <item>"90%"</item>
        <item>"100%"</item>
        <item>"110%"</item>
        <item>"120%"</item>
        <item>"130%"</item>
        <item>"150%"</item>
        <item>"200%"</item>
    </string-array>
    <string-array name="zoom_level_values">
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.5</item>
        <item>2.0</item>
    </string-array>
    <string-array name="tts_voice_names">
        <item>"Jola online"</item>
        <item>"Jola lokalnie"</item>
        <item>"Celina"</item>
        <item>"Anżela"</item>
        <item>"Asia"</item>
        <item>"Sebastian"</item>
        <item>"Bartek"</item>
        <item>"Andrzej"</item>
    </string-array>
    <string-array name="tts_voice_values">
        <item>"pl-pl-x-oda-network"</item>
        <item>"pl-pl-x-oda-local"</item>
        <item>"pl-pl-x-oda#female_1-local"</item>
        <item>"pl-pl-x-oda#female_2-local"</item>
        <item>"pl-pl-x-oda#female_3-local"</item>
        <item>"pl-pl-x-oda#male_1-local"</item>
        <item>"pl-pl-x-oda#male_2-local"</item>
        <item>"pl-pl-x-oda#male_3-local"</item>
    </string-array>
    <string-array name="hot_word_names">
        <item>"Alexa"</item>
        <item>"Computer"</item>
        <item>"Hey Google"</item>
        <item>"Hey Siri"</item>
        <item>"OK Google"</item>
    </string-array>
    <string-array name="hot_word_values">
        <item>"alexa"</item>
        <item>"computer"</item>
        <item>"hey_google"</item>
        <item>"hey_siri"</item>
        <item>"ok_google"</item>
    </string-array>
    <string name="app_name">AIS</string>
    <string name="aispanel_service_notification_title">AI-Speaker</string>
    <string name="aispanel_service_notification_message">runing</string>
    <string name="share_file_chooser_title">Share with</string>
    <string name="grant_permission">Grant permission</string>
    <string name="permission_description">AI-Speaker:API needs the following permission(s):\n</string>
    <string name="title_activity_settings">APPLICATION SETTINGS</string>
    <string name="title_activity_settings_smart_panel">SMART PANEL FUNCTIONS</string>
    <string name="title_activity_settings_experimental">EXPERIMENTAL FUNCTIONS</string>
    <string name="title_activity_other_apps">INTEGRATIONS</string>
    <string name="title_activity_browser">AI-Speaker</string>
    <string name="key_setting_report_location">setting_report_location</string>
    <string name="default_setting_report_location">false</string>
    <string name="title_setting_report_location">Mobile functions</string>
    <string name="title_notification_report_location">GPS</string>
    <string name="summary_setting_report_location">enable additional function for mobile devices. Thanks to this, it will be possible to send data about the location and the state of sensors from the phone to the gate. Note this functionality requires running a website tracking the device location, it may have a negative impact on battery life.</string>
    <string name="key_setting_app_discovery">setting_app_discovery</string>
    <string name="default_setting_app_discovery">false</string>
    <string name="title_setting_app_discovery">Control panel functions</string>
    <string name="summary_setting_app_discovery">enable an additional control panel feature. Thanks to this, it will be possible to redirect multimedia from the gateway to this device and the video with audio from cameras. The functionality works on the Cast principle - the gateway sends the media address to the player. All devices (gateway, player and cameras) must be accessible in the same network.</string>
    <string name="key_pref_ais_dom_doorbell">pref_ais_dom_doorbell</string>
    <string name="default_setting_doorbell">true</string>
    <string name="title_setting_doorbell">Video doorbell</string>
    <string name="summary_setting_doorbell">Two-way audio communication and view from the camera in the intercom (SIP server required on the AIS gateway)/</string>
    <string name="key_pref_ais_dom_sip">pref_ais_dom_sip</string>
    <string name="title_pref_ais_dom_sip">Video Doorbell view</string>
    <string name="summary_pref_ais_dom_sip">Camera view and VoIP Settings</string>
    <string name="key_setting_hot_word_mode">setting_hot_word_mode</string>
    <string name="default_setting_hot_word_mode">false</string>
    <string name="title_setting_hot_word_mode">Listening to the activation expression</string>
    <string name="summary_setting_hot_word_mode">allow the device to listening for the trigger word</string>
    <string name="default_setting_app_beep_on_click">true</string>
    <string name="summary_setting_app_beep_on_click">Play a beep sound on remote button click</string>
    <string name="title_experimental_settings">EXPERIMENTAL</string>
    <string name="title_ais_dom_connection">CONNECTION TO GATEWAY</string>
    <string name="title_ais_dom_connections_history">CONNECTIONS HISTORY</string>
    <string name="key_setting_app_launchurl">setting_app_launchurl</string>
    <string name="default_setting_app_launchurl_box">http://127.0.0.1:8180</string>
    <string name="title_setting_app_launchurl">Gate ID or URL</string>
    <string name="button_scan_gate_id">Barcode</string>
    <string name="button_nfc_gate_id">Scan NFC</string>
    <string name="button_wizard_gate_id">Wizard</string>
    <string name="title_recent_connections">Recent connections list</string>
    <string name="summary_recent_connections">you can pick position from list to reconnect</string>
    <string name="key_setting_app_tts_voice">setting_app_tts_voice</string>
    <string name="title_setting_app_tts_voice">TTS Voice</string>
    <string name="summary_setting_app_tts_voice">choose a voice</string>
    <string name="default_setting_app_tts_voice">pl-pl-x-oda-local</string>
    <string name="key_setting_test_zoomlevel">setting_test_zoomlevel</string>
    <string name="title_setting_test_zoomlevel">Zoom in app</string>
    <string name="summary_setting_test_zoomlevel">choose the magnification scale of the application panel</string>
    <string name="default_setting_test_zoomlevel">1.0</string>
    <string name="list_gesture">Gestures list</string>
    <string name="summary_list_gesture">you can define the gestures and commands behind these gestures</string>
    <string name="pref_ais_dom_exit_summary">click to exit the app</string>
    <string name="pref_ais_about_app">APP VERSION</string>
    <string name="pref_ais_dom_reset_title">Full App Reset</string>
    <string name="pref_ais_dom_reset_summary">Clears all current files and application settings. Then it installs the latest default files and settings.</string>
    <string name="gesture_imge_text">TODO</string>
    <string name="gesture_menu_item_options">TODO</string>
    <string name="gesture_id">gesture id</string>
    <string name="wizard_step_2_1_title"> Allow access to files</string>
    <string name="wizard_step_2_1_info">Access to tfiles is needed to send pictures to Assistant domowy.</string>
    <string name="wizard_step_2_2_title">Allow access to location</string>
    <string name="wizard_step_2_2_info">AIS dom application collects location data to enable presence detection, even when the app is closed or not in use.</string>
    <string name="wizard_step_3_title">Allow the access to camera</string>
    <string name="wizard_step_3_info">Access to the camera is needed to scan the gate id.</string>
    <string name="todo">TODO</string>
    <string name="wizard_checking">checking</string>
    <string name="pref_ais_dom_exit_title">Exit</string>
    <string name="default_setting_local_sip_client_name">tablet</string>
    <string name="default_setting_local_sip_client_password">*****</string>
    <string name="key_setting_local_sip_cam_url">setting_local_sip_cam_url</string>
    <string name="default_setting_local_sip_cam_url">rtsp://10.10.10.40</string>
    <string name="setting_local_sip_client_name_text">SIP Username</string>
    <string name="setting_local_sip_client_summary_text">Username for your SIP Account</string>
    <string name="setting_local_sip_client_title_text">Enter Username</string>
    <string name="setting_local_sip_pass_name_text">SIP Password</string>
    <string name="setting_local_sip_pass_summary_text">Password for your SIP Account</string>
    <string name="setting_local_sip_pass_title_text">Enter Password</string>
    <string name="setting_local_sip_domain_name_text">SIP Domain</string>
    <string name="setting_local_sip_domain_summary_text">Domain for your SIP Account</string>
    <string name="setting_local_sip_domain_title_text">Enter Username</string>
    <string name="setting_local_sip_cam_url_summary_text">Cam url fro your video doorbell</string>
    <string name="setting_local_sip_cam_url_title_text">Enter local URL to camera</string>
    <string name="key_setting_local_sip_gate_1_open_url">setting_local_sip_gate_1_open_url</string>
    <string name="setting_local_sip_gate_1_open_url_name_text">Relay 1 code</string>
    <string name="setting_local_sip_gate_1_open_url_summary_text">Code to open relay 1</string>
    <string name="setting_local_sip_gate_1_open_url_title_text">URL to call under the Open button1</string>
    <string name="key_setting_local_sip_gate_2_open_url">setting_local_sip_gate_2_open_url</string>
    <string name="setting_local_sip_gate_2_open_url_name_text">Relay 2 code</string>
    <string name="setting_local_sip_gate_2_open_url_summary_text">Code to open relay 2</string>
    <string name="setting_local_sip_gate_2_open_url_title_text">URL to call under the Open button2</string>
    <string name="key_setting_local_sip_pick_up_time">setting_local_sip_pick_up_time</string>
    <string name="setting_local_sip_pick_up_tim_name_text">Time to pick up</string>
    <string name="setting_local_sip_pick_up_tim_summary_text">Time to pick up</string>
    <string name="setting_local_sip_pick_up_tim_title_text">Set time to pick up</string>
    <string name="key_setting_local_sip_cam_aspect_ratio">setting_local_sip_cam_aspect_ratio</string>
    <string name="setting_local_sip_cam_aspect_ratio_name_text">Aspect Ratio</string>
    <string name="setting_local_sip_cam_aspect_ratio_summary_text">Aspect Ratio</string>
    <string name="setting_local_sip_cam_aspect_ratio_title_text">Set Aspect Ratio</string>
    <string name="key_setting_local_sip_speaker_device">setting_local_sip_speaker_device</string>
    <string name="setting_local_sip_speaker_device_summary_text">Audio output</string>
    <string name="setting_local_sip_speaker_device_title_text">Set default Audio output</string>
    <string name="key_setting_local_sip_mic_device">setting_local_sip_mic_device</string>
    <string name="setting_local_sip_mic_device_summary_text">Audio imput</string>
    <string name="setting_local_sip_mic_device_title_text">Set default Audio imput</string>
    <string name="key_setting_local_sip_mic_gain">setting_local_sip_mic_gain</string>
    <string name="setting_local_sip_mic_gain_name_text">Microphone gain</string>
    <string name="setting_local_sip_mic_gain_summary_text">Microphone gain</string>
    <string name="setting_local_sip_mic_gain_title_text">Set Microphone gain in decibels</string>
    <string name="key_setting_local_sip_speaker_gain">setting_local_sip_speaker_gain</string>
    <string name="setting_local_sip_speaker_gain_name_text">Speaker gain</string>
    <string name="setting_local_sip_speaker_gain_summary_text">Speaker gain</string>
    <string name="setting_local_sip_speaker_gain_title_text">Set Speaker gain in decibels</string>
</resources>