<?xml version="1.0" encoding="utf-8"?>
<com.redbooth.WelcomePageLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/welcome_page"
    tools:background="@color/page2">

    <View
        android:id="@+id/android_destiny_2_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="40dp"/>

    <RelativeLayout
        android:id="@+id/card2_page2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/folder_images"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <TextView
        style="@style/text_title"
        android:id="@+id/wizard_step_2_1_title"
        android:layout_above="@+id/wizard_desc_page2_1"
        android:text="@string/wizard_step_2_1_title" />

    <TextView
        android:id="@+id/wizard_desc_page2_1"
        style="@style/text_subtitle"
        android:text="@string/wizard_step_2_1_info"
        android:layout_above="@+id/avatar_ais_logo_page2_1"
        android:textSize="12sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/wizard_info_page2_1"
        style="@style/text_subtitle"
        android:text="@string/wizard_checking"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/avatar_ais_logo_page2_1"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        android:scaleX="0"
        android:scaleY="0" />

</com.redbooth.WelcomePageLayout>
