<?xml version="1.0" encoding="utf-8"?>
<com.redbooth.WelcomePageLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/welcome_page"
    tools:background="@color/page2">


    <ImageView
            android:id="@+id/star_3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-70dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/wizzard_cam_picture"
            android:contentDescription="@string/todo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tablet_face"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/avatar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            android:scaleX="0"
            android:scaleY="0"
            android:src="@drawable/ic_ais_logo_small_21_29"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <TextView
        style="@style/text_title"
        android:id="@+id/wizard_step_3_title"
        android:layout_above="@+id/wizard_desc_page3"
        android:text="@string/wizard_step_3_title" />

    <TextView
        android:id="@+id/wizard_desc_page3"
        style="@style/text_subtitle"
        android:text="@string/wizard_step_3_info"
        android:layout_above="@+id/avatar_ais_logo_page3"
        android:textSize="12sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/wizard_info_page3"
        style="@style/text_subtitle"
        android:text="@string/wizard_checking"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/avatar_ais_logo_page3"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        android:scaleX="0"
        android:scaleY="0" />

</com.redbooth.WelcomePageLayout>
