<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="60dp"
              android:padding="1dp">

    <LinearLayout
        android:layout_width="47dp"
        android:layout_height="fill_parent"
        android:gravity="right"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/menu_item_options"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_gravity="right|center_vertical"
            android:onClick="populateMenu"
            android:paddingEnd="12dp"
            android:src="@drawable/ic_menu_more"
            android:contentDescription="@string/gesture_menu_item_options" />
    </LinearLayout>
<ImageView
            android:id="@+id/gesture_image"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:paddingStart="6dp"
            android:layout_gravity="right|center_vertical"
            android:src="@mipmap/ic_launcher"
    android:contentDescription="@string/gesture_imge_text" />

    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp">

        <TextView
                android:id="@+id/gesture_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_gravity="left"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gesture_id"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:text="@string/gesture_id"
            android:visibility="gone" />

        <TextView
            android:id="@+id/gesture_name_ref"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="0sp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>